# pruebas-rust

./: Cargo.toml  rendimiento.sh
src/: crossteaser.rs  main.rs  ravioli.rs  search.rs
src/crossteaser/: crossteaser_search.rs
src/search/: astar.rs  astar_vec.rs.nocompile
