[package]
name = "pruebas-rust"
version = "0.1.0"
authors = ["alvaro@acer <alvaro@acer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lazy_static = "1.4.0"

#https://stackoverflow.com/questions/28028854/how-do-i-match-enum-values-with-an-integer
#num-traits = "0.2"
#num-derive = "0.2"

#https://www.reddit.com/r/rust/comments/f1e8vp/lazy_initialize_fields_behind_refs/
#once_cell = "1.3.1"


rand = "0.7"
